# bids2openminds

./: .gitignore  AUTHORS  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codemeta.json  pyproject.toml
.github/workflows/: codespell.yml  test.yml
bids2openminds/: converter.py  core.py  globals.py  main.py  mapping.py  mappings.py  openminds_version.py  report.py  utility.py
docs/source/: architecture.rst  conf.py  contributing.rst  index.rst  installation.rst  maintenance.rst  usage.rst
test/: bids_examples_ds005.jsonld  bids_examples_eeg_cbm.jsonld  bids_examples_eeg_rest_fmri.jsonld  conftest.py  test_bids_examples.py  test_dataset_version.py  test_example_datasets_click.py  test_file_bundle.py  test_openminds_version.py  test_person.py  test_subject_age.py  test_task.py  test_thorough_bids_example.py
