[project]
name = "bids2openminds"
version = "0.1.0"
dependencies = [
  "bids",
  "openminds >= 0.2.3",
  "click>=8.1",
  "pandas",
  "nameparser >= 1.1.3"
]
requires-python = ">=3.9"
authors = [
  {name = "Peyman Najafi", email = "peyman.najafi@cnrs.fr"},
  {name = "Andrew P. Davison", email = "andrew.davison@cnrs.fr"},
  {name = "Lyuba Zehl", email = "lyuba.zehl@ebrains.eu"}
]
description = "Generates openMINDS metadata from a BIDS dataset"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.scripts]
bids2openminds="bids2openminds.converter:convert_click"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]

test = [
  "pytest",
  "pytest-cov"
]


[tool.black]
line-length = 119
